--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,6 +11,7 @@
   <div class="row">
     <div class="well col-md-8 col-lg-9 col-sm-6 col-xs-6 col-md-offset-2 col-sm-offset-3 col-xs-offset-3">
       <h1 id="timer">25:00</h1>
+      <p id="start"><button type="button" class="btn btn-danger btn-lg col-md-8 col-md-offset-2">START</button></p>
     </div>
   </div>
 </div>
